--- a/farm-slider/app/globals.css
+++ b/farm-slider/app/globals.css
@@ -1,5 +1,14 @@
 :root {
   --max-width: 1100px;
+  --extra-light-grey: #F5F5F5;
+  --light-grey: #A2ACC7;
+  --dark-grey: #7884a5;
+  --extra-dark-grey: #7884a533;
+  --black: #292E3D;
+  --Emerald: #4FBA67;
+  --small-font: 18px;
+  --medium-font: 28px;
+  --title-font: 72px;
 }
 
 * {
