--- a/farm-slider/app/globals.css
+++ b/farm-slider/app/globals.css
@@ -1,6 +1,6 @@
 :root {
   --max-width: 1100px;
-  --extra-light-grey: #F5F5F5;
+  --extra-light-grey: #F8FAFF;
   --light-grey: #A2ACC7;
   --dark-grey: #7884a5;
   --extra-dark-grey: #7884a533;
@@ -22,6 +22,7 @@ body {
   max-width: 100vw;
   overflow-x: hidden;
   font-family: var(--font-raleway);
+  background-color: var(--extra-light-grey);
 }
 
 a {
