--- a/farm-slider/app/globals.css
+++ b/farm-slider/app/globals.css
@@ -1,11 +1,11 @@
 :root {
-  --max-width: 1100px;
+  --max-width: 1440px;
   --extra-light-grey: #F8FAFF;
   --light-grey: #A2ACC7;
-  --dark-grey: #7884a5;
+  --dark-grey: #525C7A;
   --extra-dark-grey: #7884a533;
   --black: #292E3D;
-  --Emerald: #4FBA67;
+  --emerald: #4FBA67;
   --small-font: 18px;
   --medium-font: 28px;
   --title-font: 72px;
@@ -28,4 +28,8 @@ body {
 a {
   color: inherit;
   text-decoration: none;
+}
+
+.container {
+  max-width: var(--max-width);
 }
