--- a/farm-slider/app/(components)/slider/Slider.module.css
+++ b/farm-slider/app/(components)/slider/Slider.module.css
@@ -1,3 +1,10 @@
+.sliderBlock {
+    display: flex;
+    flex-direction: column;
+    gap: 37px;
+    max-width: calc(var(--card-width)*4);
+}
+
 .slider {
     height: 453px;
 }
@@ -5,7 +12,7 @@
 .container {
     display: flex;
     width: 100%;
-    height: 100%;
+    height: 453px;
     overflow-x: hidden;
     overflow-y: hidden;
     scroll-behavior: smooth;
