refactoring frames types

--- a/farm-slider/app/(components)/Card/Card.module.css
+++ b/farm-slider/app/(components)/Card/Card.module.css
@@ -25,6 +25,11 @@
     border-bottom-right-radius: 65%;
 }
 
+.revertDrop {
+    border-top-right-radius: 65%;
+    border-bottom-left-radius: 65%;
+}
+
 .circle {
     border-radius: 600px;
 }
