--- a/farm-slider/app/(components)/slider/Slider.module.css
+++ b/farm-slider/app/(components)/slider/Slider.module.css
@@ -2,7 +2,28 @@
     display: flex;
     flex-direction: column;
     gap: 37px;
+    margin: 0 auto;
     max-width: calc(var(--card-width)*4);
+}
+
+@media screen and (max-width: 1405px) {
+
+    .sliderBlock {
+        max-width: calc(var(--card-width)*3);
+    }
+}
+
+@media screen and (max-width: 1060px) {
+
+    .sliderBlock {
+        max-width: calc(var(--card-width)*2);
+    }
+}
+@media screen and (max-width: 760px) {
+
+    .sliderBlock {
+        max-width: var(--card-width);
+    }
 }
 
 .slider {
